public/style.css
*,.container-fluid{
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
}

 :root {
     --dark: #1a253f;
   
     --secondary: #776CE1;
     --info: #4d79f6;
     --termary: #848db3;
     --puree: #eff2f9;
     --fade: #7081b9;
     --mild: #8997bd;
     --black: #060b1b;
     --twitter: #4ac7ec;
     --dribble: #ff5da0;
     --lightgreen: #5DC676;
     --orangemilk: #ECAC94;
     --darkgreen: #378c3f;
   
 }

#header
{
	text-align: center;
	position: relative;
	width: 100%;
	height: 550px;
	background-image: url('images/landbe.png');
	background-size: cover;
	background-position: center;
	z-index: 1;
}

#header::after
{
	position: absolute;
	content: '';
	background-color: #4E4F55;
	opacity: 50%;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	z-index: 1;
}
#space_menu
{
	position: relative;
	width: 100%;
	height: 72px;
	padding: 20px 0 5px 0;
	z-index: 0;
}
#menu
{
	position: fixed;
	display: flex;
	flex-direction: row;
	width: 105%;
	height: 72px;
	padding: 20px 0 5px 0;
	color: white;
	z-index: 2;
}
#active_menu
{
	position: absolute;
}
#menu #menu_right #div_bar-menu
{
	display:none;
}

#menu #menu_left,
#menu #menu_right
{
	width: 50%;
}
#menu #menu #menu_left ul,
#menu #menu_right ul
{
	list-style: none;
}

#menu_left ul li,
#menu_right ul li
{
	display: inline-block;
}

#menu_left ul li a,
#menu_right ul li a
{
	padding: 5px 15px 5px 15px;
	position: relative;
	color: white;
	text-decoration: none;
	display: block;
	cursor: pointer;
}

#menu_left ul li a
{
	font-size: 24px;
	padding: 0 15px 5px 100px;
}

#menu_right ul li a:hover:after
{
	position: absolute;
	padding: 5px 15px 5px 15px;
	border-radius: 5px;
	content:'';
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	background-color: white;
	opacity: 40%;
}

#menu_right ul li:nth-child(1) a:hover:after
{
	content:"ABOUT";
}
#menu_right ul li:nth-child(2) a:hover:after
{
	content:"SKILL";
}
#menu_right ul li:nth-child(3) a:hover:after
{
	content:"EDUCATION";
}
#menu_right ul li:nth-child(4) a:hover:after
{
	content:"EXPERIENCE";
}
#menu_right ul li:nth-child(5) a:hover:after
{
	content:"CONTACT";
}



#info
{
	position: relative;
	z-index: 2;
	text-align: center;
}
#avatar
{
	position: absolute;
	z-index: 2;
	width: 155px;
	height: 155px;
	border-radius: 360px;
	transition: all .3s ease-out;
	cursor: pointer;
	box-sizing: border-box;
}

#avatar:hover
{
	width: 170px;
	height: 170px;
	transition: all .3s ease-out;
}

#info h2,
#info text
{
	color: white;
}

#info h2
{
	font-size: 40px;
}

#info text
{
	font-size: 24px;
}

#info #btn_hire
{
	padding: 5px 40px 5px 40px;
	color: white;
	border-radius: 5px;
	text-align: center;
	border: 0;
	outline: none;
	background-color: var(--secondary);
	transition: 0.3s;
	font-size: 18px;
	cursor: pointer;
}

#info #btn_hire:hover
{
	background-color: var(--twitter);
	transition: 0.3s;
}

#social_media
{
	position: relative;
	top: 20%;
	z-index: 2;
}

#social_media a
{
	background-color: grey;
	border-radius: 360px;
}

#social_media a i
{
	font-size: 20px;
	color: white;
}

#social_media a:nth-child(1)
{
	padding: 17px 21px 17px 21px;
}
#social_media a:nth-child(2)
{
	padding: 17px 15px 17px 15px;
}

#social_media a:hover
{
	background-color: #A9AAB8;
}


/* CONTENT */
.box
{
	border:1px solid #EFEEF5;
	padding: 15px;
	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
}

#info_about .info_item
{
	width: 100%;
	display: flex;
	flex-direction: row;
	padding: 10px 0 10px 0;
}

.info_item .info_item-title
{
	width: 28%;
	font-weight: bold;
}

.info_item .info_item-content
{
	width: 70%;
}


/* Professional Skills */
#professional_skills .skill_left,
#professional_skills .skill_right
{
	width: 50%;
}
.skill_item
{
	padding: 10px 0 10px 0;
	display: flex;
	flex-direction: row;
}
.skill_item .skill_item-title
{
	width: 24%;
	font-weight: bold;
}
.skill_item .skill_item-content
{
	width: 70%;
}

/* Work experience */
.box_exp,
.box_edu
{
	padding: 0;
}

.exp_item,
.edu_item
{
	display: flex;
	flex-direction: row;
}

.exp_item .exp_left,
.edu_item .edu_left
{
	background-color: var(--secondary);
	width: 30%;
	color: white;
	font-size: 20px;
	padding: 10px;
	display: flex;
	align-items: center;
	justify-content: row;
	justify-content: center;
}
.exp_item .exp_right,
.edu_item .edu_right
{
	width: 70%;
	padding: 10px 15px 10px 15px;
	font-size: 17px;
}

.edu_item .edu_right ul,
.exp_item .exp_right ul
{
	list-style: none;
}


/*CONTACT */
#contact
{
	margin: 0;
	padding: 0;
	width: 100%;
	height: 500px;
	background-image: url('images/map.png');
	background-size: cover;
	background-repeat: no-repeat;
}

#box_mail
{
	padding: 10px;
	width: 70%;
	background-color: white;
	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
}

.form_mail
{
	width: 100%;
	display: flex;
	flex-direction: row;
}

.box_mail-left,
.box_mail-right
{
	width: 50%;
}

.btn_send-mail
{
	padding: 5px 25px 5px 25px;
	border: 0;
	outline: 0;
	color: white;
	background-color: var(--secondary);
}

.box_mail-left i
{
	position: relative;
	left: 26px;
	font-size: 17px;
}

 .box_mail-left input
 {
 	padding: 7px 15px 4px 30px;
 	border-radius: 20px;
 	border:1px solid lightgray;
 	width: 80%;
 	font-size: 16px;
 }
 .box_mail-left input:focus
 {
 	outline:1px solid var(--secondary);
 }

 .box_mail-left textarea 
 {
 	width: 80%;
 	padding: 10px;
 	font-size: 16px;
 	border: 0;
 	border-bottom: 1px solid lightgray;
 }
.box_mail-left textarea:focus
 {
outline:1px solid var(--secondary);
 }

.btn_send-mail:hover
{
	background-color: var(--twitter);
}

#email_error,
#subject_error,
#message_error
{
	color: red;
}



/* animation */
#frame_avatar
{
	position: relative;
	display: inline-flex;
	justify-content: space-around;
	align-items: center;
	width: 176px;
	height: 176px;
	border-radius: 360px;
	z-index: 1;
}
#frame_avatar::after
{
	content: "";
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	width: 176x;
	height: 176px;
	border-radius: 360px;
  	animation-name: stretch;
    animation-duration: 2.0s;
	animation-timing-function: ease;
	animation-direction: alternate;
	animation-iteration-count: infinite;
	animation-play-state: running;

	-webkit-animation-duration: 1.5s;
    -webkit-animation-timing-function: ease;
    -webkit-animation-direction: normal;
    -webkit-animation-iteration-count: infinite;
    -webkit-animation-play-state: running;

}
 @keyframes stretch {
            0% {
               transform: scale(.5);
               background-color: var(--secondary);
               border-radius: 100%;
               opacity: 90%;
            }
  
            50% {
                background-color: var(--secondary);
               border-radius: 100%;
               opacity: 70%;
            }

             75% {
                background-color: var(--secondary);
               border-radius: 100%;
               opacity: 50%;
            }
  
            100% {
                transform: scale(1.0);
                background-color: var(--secondary);
               border-radius: 100%;
               opacity: 0%;
            }
        }



 /* REPONSIVE */
 /* MoBile */
 @media only screen and (min-width:250px) and (max-width: 600px)
 {
 	#header
 	{
 		height: 550px;
 		width: 100%;
 	}
 	#menu_left
	{
		display: none;
	}

	#menu #menu_right #bar_menu
	{
		font-size: 28px;
		margin-top: 5px;
	}
	#menu #menu_right #div_bar-menu
	{
		display: block;
		transition: 0.7s;
		position: relative;
		top: -10px;
		left: 10px;
	}
	#menu #menu_right #div_bar-menu .border_bar
	{
		width: 40px;
		margin-top: 5px;
		border-radius: 20px;
		height: 5px;
		background-color: white;
		transition: 0.5s;
	}

	#menu_right #list_menu
	{
		background: linear-gradient(to bottom, #4b6cb7, #182848);
		display: block;
 		position: fixed;
 		width: 270px;
		top: 0;
 		bottom: 0;
 		right: -340px;
 		z-index: 2;
 		transition: 0.7s;
	}
 	#menu #menu_right ul
 	{
 		list-style: normal;
 		padding: 0;
 	}

 	#menu #menu_right ul li
 	{
 		display: block;
 		line-height: 3rem;
 		font-size: 20px;
 		width: 100%;
 	}
 	#menu #menu_right ul li a
 	{
 		width: 100%;
 		text-align: left;
 	}
 	#active_menu:checked ~ #div_bar-menu .border_bar:nth-child(1)
 	{
		transform: rotate(50deg);
		position: absolute;
		transition: 0.5s;
 	}
 	#active_menu:checked ~ #div_bar-menu .border_bar:nth-child(2)
 	{
		opacity: 0;
		transition: 0.2s;
 	}
 	#active_menu:checked ~ #div_bar-menu .border_bar:nth-child(3)
 	{
		transform: rotate(-50deg);
		position: absolute;
		transition: 0.5s;
 	}
 	#active_menu:checked ~ #list_menu
	{
		right: 0px;
		transition: 0.7s;
	}

 /*	#menu #menu_right ul
 	{
 		display:none;
 	}
*/
 	#social_media
	{
		position: relative;
		z-index: 2;
	}

 	.box
 	{
 		width: 90%;
 	}

 	#info_about .info_item
 	{
 		display: block;
 	}
 	.info_item .info_item-title
	{
		width: 100%;
		font-weight: bold;
	}
	.info_item .info_item-content
	{
		width: 100%;
	}

	#professional_skills .skill_left,
	#professional_skills .skill_right
	{
		width: 100%;
		display: block;
	}

	.skill_item .skill_item-title
	{
		width: 100%;
		font-weight: bold;
	}
	.skill_item .skill_item-content
	{
		width: 100%;
	}

	.exp_item,
	.edu_item
	{
		display: block;
	}

	.exp_item .exp_left,
	.edu_item .edu_left
	{
		text-align: center;
		width: 100%;
	}

	.exp_item .exp_right,
	.edu_item .edu_right
	{
		width: 100%;
	}

	#contact
	{
		height:800px ;
	}

	#box_mail
	{
		width: 90%;
	}

	.form_mail
	{
		width: 100%;
		display:block;
	}

	.box_mail-left,
	.box_mail-right
	{
		width: 100%;
	}

	.box_mail-right
	{
		margin-top: 3rem;
		padding-left: 20px;
	}

	.box_mail-left input,
	.box_mail-left textarea
	{
		width: 90%;
	}

	.box_mail-left textarea
	{
		border-top: 0;
		border-left: 0;
		border-right: 0;
	}

	.btn_send-mail
	{
		width: 30%;
	}

 }

/* IPAD */
 @media only screen and (min-width: 601px) and (max-width: 800px)
 {
 #menu_left
	{
		display: none;
	}

	#menu #menu_right #bar_menu
	{
		font-size: 28px;
		margin-top: 6px;
	}
	#menu #menu_right #div_bar-menu
	{
		display: block;
		transition: 0.7s;
		position: relative;
		top: -10px;
		left: 10px;
	}
	#menu #menu_right #div_bar-menu .border_bar
	{
		width: 40px;
		margin-top: 5px;
		border-radius: 20px;
		height: 5px;
		background-color: white;
		transition: 0.5s;
	}

	#menu_right #list_menu
	{
		background: linear-gradient(to bottom, #4b6cb7, #182848);
		display: block;
 		position: fixed;
 		width: 500px;
		top: 0;
 		bottom: 0;
 		right: -500px;
 		z-index: 2;
 		transition: 0.7s;
	}
 	#menu #menu_right ul
 	{
 		list-style: normal;
 		padding: 0;
 	}

 	#menu #menu_right ul li
 	{
 		display: block;
 		line-height: 3rem;
 		font-size: 20px;
 		width: 100%;
 	}
 	#menu #menu_right ul li a
 	{
 		width: 100%;
 		text-align: left;
 	}
 	#active_menu:checked ~ #div_bar-menu .border_bar:nth-child(1)
 	{
		transform: rotate(50deg);
		position: absolute;
		transition: 0.5s;
 	}
 	#active_menu:checked ~ #div_bar-menu .border_bar:nth-child(2)
 	{
		opacity: 0;
		transition: 0.2s;
 	}
 	#active_menu:checked ~ #div_bar-menu .border_bar:nth-child(3)
 	{
		transform: rotate(-50deg);
		position: absolute;
		transition: 0.5s;
 	}
 	#active_menu:checked ~ #list_menu
	{
		right: 0px;
		transition: 0.7s;
	}

	#box_mail
	{
		width: 95%;
	}

	#contact
	{
		width: 100%;
		height: 500px;
	}

	.box_mail-left textarea
	{
		border-top: 0;
		border-left: 0;
		border-right: 0;
	}
 }

  @media only screen and (min-width: 801px) and (max-width: 1100px)
  {
  	#menu #menu_left
  	{
  		width: 40%;
  	}
	#menu #menu_right
	{
		width: 60%;
	}

	#box_mail
	{
		width: 90%;
	}

	#contact
	{
		width: 100%;
		height: 500px;
	}

	.box_mail-left textarea
	{
		border-top: 0;
		border-left: 0;
		border-right: 0;
	}
  }

